Correct over-spacing of elements

--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,20 @@
     font-family: 'Mukta', sans-serif;
     text-align: center;
     margin: 0;
+    margin-bottom:0.5em;
     font-size: 48px;
 }
 
 main {
-    height: 90vh;
     display: flex;
     flex-direction: column;
+    padding: 0.75em;
+    gap: 3em;
 }
 
 #player-buttons-container {
     display: flex;
-    height: 30%;
+    height: 20%;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -34,5 +36,7 @@ main {
 .body-text {
     font-family: "Montserrat", sans-serif;
     font-size: 32px;
-    text-align: center;    
+    text-align: center;
+    margin: 0;
+    padding: 0;    
 }
